--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,48 @@
   margin: 0;
   padding: 0;
 }
+:root {
+  /* cores */
+  --brand-color-light: #60a5fa;
+  --brand-color-dark: #1d4ed8;
+  --bg-color: #0f172a;
+  --stroke-color: #1e293b;
+  --text-color-primary: #f1f5f9;
+  --text-color-secondary: #cbd5e1;
+
+  /* tipografia */
+  --font-family: "Archivo", sans-serif;
+  --h1: 800 24px/135% var(--font-family);
+  --h2: 800 16px/140% var(--font-family);
+  --h3: 800 14px/140% var(--font-family);
+  --text-span: 600 14px/145% var(--font-family);
+  --text: 400 16px/160% var(--font-family);
+  --text-sm: 400 14px/160% var(--font-family);
+}
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color-primary);
+  font-family: "Archivo", sans-serif;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover {
+  color: var(--brand-color-light);
+}
+h1,
+h2,
+h3 {
+  color: inherit;
+}
+.container {
+  max-width: 1280px;
+  margin-inline: auto;
+  padding-inline: 32px;
+}
+.iconssup:hover {
+  img {
+    transform: scale(1.15);
+  }
+}
