--- a/styles/weekly.css
+++ b/styles/weekly.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  b p {
+  p {
     display: flex;
     align-items: center;
     gap: 4px;
@@ -16,7 +16,7 @@
 }
 #cardweekly {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   /* border: solid; */
   margin-block: 24px;
   width: 1216px;
